Bug 1146775: implement comment collapse all and by tag

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -325,8 +325,7 @@ input[type="number"] {
 /* actions */
 
 #top-actions {
-    margin-top: 5px;
-    padding-bottom: 20px;
+    margin: 4px 0;
 }
 
 #top-actions .save-btn {
@@ -465,13 +464,18 @@ td.flag-requestee {
 
 /* comments and activity */
 
+#comment-actions {
+    margin-top: 4px;
+    text-align: right;
+}
+
 .change-set {
     clear: both;
     -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    margin-top: 20px;
+    margin-top: 8px;
     border: 1px solid #ddd;
 }
 
@@ -488,10 +492,15 @@ td.flag-requestee {
     padding-left: 8px !important;
 }
 
+.change-gravatar .vcard {
+    width: 36px;
+    text-align: center;
+}
+
 .change-author {
     width: 100%;
     vertical-align: top;
-    padding-top: 4px !important;
+    padding: 5px 0 !important;
 }
 
 .change-author .vcard {
